change the mute button font size and background colour to solve contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,18 +192,18 @@ centered-list {
     top: 10px;
     right: 10px;
     padding: 8px;
-    background-color: #d9534f;
+    background-color: #c9302c;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.2em;
     transition: background-color 0.3s;
 }
 
 .mute-button:hover {
-    background-color: #c9302c;
+    background-color: #7c1f1c;
 }
 
 /* Set the html and body to take full height to support sticky footer */
